argocd/infra/gateway/parts/route-nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: ingress-nginx-ns
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: eoepca-public
      namespace: gateway
  hostnames:
    - "*.ngx.develop-v2.eoepca.org"
  rules:
    - backendRefs:
        - name: ingress-nginx-controller
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: nginx
  namespace: ingress-nginx-ns
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: eoepca-public
      namespace: gateway
  hostnames:
    - "*.ngx.develop-v2.eoepca.org"
  rules:
    - backendRefs:
        - name: ingress-nginx-controller
          port: 443
